--- a/index.html
+++ b/index.html
@@ -45,129 +45,127 @@
     <!-- Regua horizontal -->
     <hr class="mt-3" />
     </header>
-    
+
     <!-- Produto -->
     <div class="container">
-        <div class="row g-5">
-
+        <div class="row g-3" id="t-produto">
             <!-- Produto -->
-            <div class="col-xll-2 col-lg-3 col-md-4 col-sm-5 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header">
-                        <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                        <h5 class="text-start">R$ 60,00</h5>
-                        <p class="text-start">em 12x sem juros</p>
-                        <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
                     </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
 
             <!-- Produto -->
-            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch" id="produto">
-                <div class="text-center">
-                    <div class="position-absolute right-0 p-2 text-danger bg-black"><b>30% OFF</b></div>
-                    <div class="text-danger text-lg-end"><i class="bi bi-bag"></i></div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <hr>
-                    <div class="card-header"></div>
-                    <p class="card-title">Colar de misangas Azul e linha de pesca</p>
-                    <h5 class="text-start">R$ 60,00</h5>
-                    <p class="text-start">em 12x sem juros</p>
-                    <p class="text-success text-lg-end">Frete gratis</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
                 </div>
             </div>
         </div>
