--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 
     <!-- Produto -->
     <div class="container">
-        <div class="row g-3" id="t-produto">
+        <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="t-produto">
+
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -65,11 +66,11 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -80,11 +81,11 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -95,11 +96,11 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -110,11 +111,11 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -125,11 +126,39 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <i class="bi bi-bag text-danger"></i>
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -140,26 +169,11 @@
             </div>
 
             <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/prodtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -170,6 +184,7 @@
             </div>
         </div>
     </div>
+    <br>
     <!-- Rodapé -->
     <div class="rodape"></div>
 
