--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -69,13 +68,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/colar.jpg" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -84,13 +82,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/colar2.jpg" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -99,13 +96,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/tatu.jpg" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -114,13 +110,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -129,13 +124,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/capvara.jpg" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -143,13 +137,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/tatu.jpg" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -157,13 +150,12 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
@@ -172,18 +164,27 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <i class="bi bi-bag text-danger"></i>
                     <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success">Frete grátis</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <style>
+        .card {
+            height: 450px;
+        }
+
+
+        .card img {
+            height: 60%;
+        }
+    </style>
     <br>
     <!-- Rodapé -->
     <div class="rodape"></div>
