--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <!-- Produto -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="t-produto">
 
             <!-- Produto -->
