--- a/index.html
+++ b/index.html
@@ -54,7 +54,63 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-danger text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-danger text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/jarro.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-danger text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/peixe.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-danger text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/peneira.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -68,7 +124,33 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar.jpg" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
+                    <div class="card-body">
+                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <p class="card-text">R$ 60,00</p>
+                        <p class="card-text">em 12x sem juros</p>
+                        <p class="card-text text-success text-end">Frete grátis</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Produto -->
+            <div class="col">
+                <div class="card text-center" id="produto">
+                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
+                    <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
@@ -82,89 +164,7 @@
             <div class="col">
                 <div class="card text-center" id="produto">
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar2.jpg" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/tatu.jpg" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/capvara.jpg" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/tatu.jpg" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/Arte.png" class="card-img-top" alt="Produto">
+                    <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
                         <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
                         <p class="card-text">R$ 60,00</p>
