--- a/menu.html
+++ b/menu.html
@@ -48,7 +48,7 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Cadastre-se</a>
+                                <a href="cadastro.html" class="nav-link">Cadastre-se</a>
                             </li>
                             <li class="nav-item">
                                 <a href="login.html" class="nav-link">Login</a>
