--- a/index.html
+++ b/index.html
@@ -45,6 +45,51 @@
     <!-- Regua horizontal -->
     <hr class="mt-3" />
     </header>
+    <div class="Title-categoria">
+        <h5 class="text-center">Categorias</h5>
+    </div>
+    <hr>
+
+    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+    </div>
+    <style>
+        #cards {
+            margin-left: 8%;
+        }
+
+        #categoria {
+            margin-left: 30px;
+            padding: 1.1em 1.2em 0.2em;
+            text-align: center;
+            box-shadow: 0 2 0px rgba(0, 0, 0, .2);
+        }
+
+        #categoria img {
+            background-color: aliceblue;
+            width: 65%;
+            border-radius: 50%;
+            margin: 0 auto;
+            box-shadow: 0 0 10px rgb(0, 0, 0);
+        }
+    </style>
 
     <!-- Produto -->
     <div class="container-fluid">
