--- a/menu.html
+++ b/menu.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg">
-       <div class="container"> 
+        <div class="container">
             <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="border-dark navbar-toggler-icon"></span>
@@ -32,7 +33,7 @@
 
                 <div class="offcanvas-body">
 
-                    <ul class="navbar-nav flex-grow-1 ms-5">
+                    <ul class="navbar-nav flex-grow-1 ms-4">
                         <li class="nav-item">
                             <a href="#" class="nav-link">Categoria</a>
                         </li>
@@ -46,7 +47,7 @@
                     </ul>
                     <!-- Alinha à direita de forma flutuante "align-self-end" -->
                     <div class="align-self-end">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav ms-4">
                             <li class="nav-item">
                                 <a href="cadastro.html" class="nav-link">Cadastre-se</a>
                             </li>
@@ -74,7 +75,10 @@
 
         .offcanvas {
             background-color: #7a260f;
+        }
 
+        .offcanvas .nav-item .nav-link:hover {
+            color: rgb(0, 0, 0);
         }
 
         #logo {
@@ -91,13 +95,61 @@
         }
 
         .nav-item .nav-link {
-            color: #000000;
+            color: #ffffff;
+
         }
 
         .nav-item .nav-link:hover {
             color: #ffffff;
+
         }
     </style>
+    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+        <div class="" id="categoria" style="width: 9rem;">
+            <img src="imagens/produtos/jarro.png" class="card-img-top">
+        </div>
+    </div>
+    <style>
+        #cards{
+            margin-left: 8%;
+        
+        }
+        #categoria {
+            margin-left: 30px;
+            padding: 1.1em 1.2em 0.2em;
+            text-align: center;
+            box-shadow: 0 2 0px rgba(0, 0, 0, .2);
+        }
+
+        #categoria img {
+
+            width: 65%;
+            border-radius: 50%;
+            margin: 0 auto;
+            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+        }
+
+        #categoria .btn {
+            border-radius: 2em;
+            color: #ffffff;
+        }
+    </style>
+
     <footer class="bg-light text-lg-start">
         <div class="container p-4">
             <div class="row">
@@ -137,7 +189,8 @@
                         <img src="imagens/icon-Pagamentos/correios.png">
                         <img src="imagens/icon-Pagamentos/sedex.png">
                         <img src="imagens/icon-Pagamentos/pac.png">
-                    </div><hr>
+                    </div>
+                    <hr>
                 </div>
             </div>
         </div>
@@ -164,4 +217,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
