--- a/index.html
+++ b/index.html
@@ -49,37 +49,46 @@
         <h5 class="text-center">Categorias</h5>
     </div>
     <hr>
-
-    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
-        <div class="" id="categoria" style="width: 9rem;">
+<!--  
+    <div class="container-fluid row" id="cards">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Acessórios</p>
         </div>
-        <div class="" id="categoria" style="width: 9rem;">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Moda Masculina</p>
         </div>
-        <div class="" id="categoria" style="width: 9rem;">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Moda Feminina</p>
         </div>
-        <div class="" id="categoria" style="width: 9rem;">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Cerâmicas</p>
         </div>
-        <div class="" id="categoria" style="width: 9rem;">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Penas</p>
         </div>
-        <div class="" id="categoria" style="width: 9rem;">
+        <div class="" id="categoria">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
+            <p>Sementes</p>
         </div>
     </div>
+  
     <style>
         #cards {
-            margin-left: 8%;
+            width: 100%;
+            margin-left:10%;
         }
 
         #categoria {
-            margin-left: 30px;
+            margin-left: 20px;
+            background-color: azure;
             padding: 1.1em 1.2em 0.2em;
             text-align: center;
-            box-shadow: 0 2 0px rgba(0, 0, 0, .2);
+            box-shadow: 0 0 3px rgba(0, 0, 0, .2);
         }
 
         #categoria img {
@@ -89,11 +98,16 @@
             margin: 0 auto;
             box-shadow: 0 0 10px rgb(0, 0, 0);
         }
+        #categoria img:hover{
+            background-color: aliceblue;
+            width: 70%;
+            cursor: pointer;
+        }
     </style>
-
+  -->
     <!-- Produto -->
     <div class="container-fluid">
-        <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="t-produto">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-3" id="t-produto">
 
             <!-- Produto -->
             <div class="col">
@@ -101,7 +115,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-danger text-end">Frete grátis</p>
@@ -115,7 +129,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-danger text-end">Frete grátis</p>
@@ -129,7 +143,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/jarro.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-danger text-end">Frete grátis</p>
@@ -143,7 +157,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/peixe.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-danger text-end">Frete grátis</p>
@@ -157,7 +171,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/peneira.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-success text-end">Frete grátis</p>
@@ -171,7 +185,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-success text-end">Frete grátis</p>
@@ -184,7 +198,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-success text-end">Frete grátis</p>
@@ -197,7 +211,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-success text-end">Frete grátis</p>
@@ -211,7 +225,7 @@
                     <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
                     <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
                     <div class="card-body">
-                        <h5 class="card-title">Colar de missangas Azul e linha de pesca</h5>
+                        <h5 class="card-title">Nome do Produto</h5>
                         <p class="card-text">R$ 60,00</p>
                         <p class="card-text">em 12x sem juros</p>
                         <p class="card-text text-success text-end">Frete grátis</p>
@@ -226,8 +240,9 @@
         }
 
         .card img {
-            height: 60%;
+            height: 60%; 
         }
+
     </style>
     <br>
     <!-- Rodapé -->
