--- a/menu.html
+++ b/menu.html
@@ -104,7 +104,7 @@
 
         }
     </style>
-    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
+    <div class="container row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3" id="cards">
         <div class="" id="categoria" style="width: 9rem;">
             <img src="imagens/produtos/jarro.png" class="card-img-top">
         </div>
