--- a/index.html
+++ b/index.html
@@ -48,63 +48,44 @@
     <div class="Title-categoria">
         <h5 class="text-center">Categorias</h5>
     </div>
-    <hr>
-<!--  
-    <div class="container-fluid row" id="cards">
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Acessórios</p>
-        </div>
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Moda Masculina</p>
-        </div>
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Moda Feminina</p>
-        </div>
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Cerâmicas</p>
-        </div>
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Penas</p>
-        </div>
-        <div class="" id="categoria">
-            <img src="imagens/produtos/jarro.png" class="card-img-top">
-            <p>Sementes</p>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card text-bg-dark m-3"  id="categorias">
+                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
+                    <a href="#" class="text-center card-img-overlay nav-link">Acessórios</a>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-bg-dark m-3"  id="categorias">
+                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
+                    <a href="#" class="text-center card-img-overlay nav-link">Roupas</a>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-bg-dark m-3"  id="categorias">
+                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
+                    <a href="#" class="text-center card-img-overlay nav-link">Bancos</a>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-bg-dark m-3"  id="categorias">
+                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
+                    <a href="#" class="text-center card-img-overlay nav-link">Redes</a>
+                </div>
+            </div>
         </div>
     </div>
-  
     <style>
-        #cards {
-            width: 100%;
-            margin-left:10%;
-        }
-
-        #categoria {
-            margin-left: 20px;
-            background-color: azure;
-            padding: 1.1em 1.2em 0.2em;
-            text-align: center;
-            box-shadow: 0 0 3px rgba(0, 0, 0, .2);
-        }
-
-        #categoria img {
-            background-color: aliceblue;
-            width: 65%;
-            border-radius: 50%;
-            margin: 0 auto;
-            box-shadow: 0 0 10px rgb(0, 0, 0);
-        }
-        #categoria img:hover{
-            background-color: aliceblue;
-            width: 70%;
-            cursor: pointer;
+        #categorias {
+            width: 200px;
+            border-radius: 100rem;
         }
     </style>
-  -->
     <!-- Produto -->
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-3" id="t-produto">
@@ -205,19 +186,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
 
             <!-- Produto -->
             <div class="col">
@@ -234,16 +202,6 @@
             </div>
         </div>
     </div>
-    <style>
-        .card {
-            height: 450px;
-        }
-
-        .card img {
-            height: 60%; 
-        }
-
-    </style>
     <br>
     <!-- Rodapé -->
     <div class="rodape"></div>
