--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </div>
         </div>
     </div>
+    <p>Alteração teste</p>
     <style>
         #categorias {
             width: 200px;
