--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <div class="menu"></div>
-    <br>
 
-    <!-- Slide   -->
-    <div id="carouselExampleInterval" class="carousel container-fluid" data-bs-ride="carousel">
+    <div class="menu"></div>
+
+     <!-- Slide   -->
+     <div id="carouselExampleInterval" class="carousel container-fluid" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
                 <img src="imagens/anuncios/anuncio3.png" class="d-block w-100">
@@ -43,170 +43,84 @@
     </div>
 
     <!-- Regua horizontal -->
-    <hr class="mt-3" />
+    <hr class="mt-3 mb-5"/>
     </header>
-    <div class="Title-categoria">
-        <h5 class="text-center">Categorias</h5>
+
+    <div class="card-text">
+<h5 class="ms-3">Ofertas do dia → <a href="">Ver todas</a></h5>
     </div>
-    
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card text-bg-dark m-3"  id="categorias">
-                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
-                    <a href="#" class="text-center card-img-overlay nav-link">Acessórios</a>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-bg-dark m-3"  id="categorias">
-                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
-                    <a href="#" class="text-center card-img-overlay nav-link">Roupas</a>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-bg-dark m-3"  id="categorias">
-                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
-                    <a href="#" class="text-center card-img-overlay nav-link">Bancos</a>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-bg-dark m-3"  id="categorias">
-                    <img src="imagens/produtos/jarro.png" class="card-img"  id="categorias">
-                    <a href="#" class="text-center card-img-overlay nav-link">Redes</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <style>
-        #categorias {
-            width: 200px;
-            border-radius: 100rem;
-        }
-    </style>
-    <!-- Produto -->
     <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-3" id="t-produto">
-
-            <!-- Produto -->
+        <div class="row">
+            <div class="l-produtos row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-4 g-2">
             <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-danger text-end">Frete grátis</p>
+                <div class="produto card h-auto d-flex flex-column">
+                    <div class="produto-icons d-flex justify-content-between">
+                        <button class="icon-button"><i class="bi bi-heart"></i></button>
+                        <button class="icon-button"><i class="bi bi-cart-check"></i></button>
+                    </div>
+                    <img class="produto-image card-img-top img-fluid" src="imagens/produtos/peixe.png">
+                    <div class="produto-info card-body">
+                        <h6 class="card-title text-center">Peixe de Madeira</h6>
+                        <p class="card-text produto-descricao mb-lg-3"> Em 6x de R$ 20 sem juros</p>
+                        <p class="card-text text-danger produto-preco"><s style="font-size: 15px;">R$ 200,00</s> <br>R$ 120,00</p>
+                        <p class="card-text text-danger text-lg-end">frete gratis</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Produto -->
             <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-danger text-end">Frete grátis</p>
+                <div class="produto h-auto card d-flex flex-column">
+                    <div class="produto-icons d-flex justify-content-between">
+                        <button class="icon-button"><i class="bi bi-heart"></i></button>
+                        <button class="icon-button"><i class="bi bi-cart-check"></i></button>
+                    </div>
+                    <img class="produto-image card-img-top img-fluid" src="imagens/produtos/peixe.png">
+                    <div class="produto-info card-body">
+                        <h6 class="card-title text-center">Peixe de Madeira</h6>
+                        <p class="card-text produto-descricao mb-lg-3"> Em 6x de R$ 20 sem juros</p>
+                        <p class="card-text text-danger produto-preco"><s style="font-size: 15px;">R$ 200,00</s> <br>R$ 120,00</p>
+                        <p class="card-text text-danger text-lg-end">frete gratis</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Produto -->
             <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/jarro.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-danger text-end">Frete grátis</p>
+                <div class="produto card h-auto d-flex flex-column">
+                    <div class="produto-icons d-flex justify-content-between">
+                        <button class="icon-button"><i class="bi bi-heart"></i></button>
+                        <button class="icon-button"><i class="bi bi-cart-check"></i></button>
+                    </div>
+                    <img class="produto-image card-img-top img-fluid" src="imagens/produtos/peixe.png">
+                    <div class="produto-info card-body">
+                        <h6 class="card-title text-center">Peixe de Madeira</h6>
+                        <p class="card-text produto-descricao mb-lg-3"> Em 6x de R$ 20 sem juros</p>
+                        <p class="card-text text-danger produto-preco"><s style="font-size: 15px;">R$ 200,00</s> <br>R$ 120,00</p>
+                        <p class="card-text text-danger text-lg-end">frete gratis</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Produto -->
             <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/peixe.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-danger text-end">Frete grátis</p>
+                <div class="produto card h-auto d-flex flex-column">
+                    <div class="produto-icons d-flex justify-content-between">
+                        <button class="icon-button"><i class="bi bi-heart"></i></button>
+                        <button class="icon-button"><i class="bi bi-cart-check"></i></button>
                     </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/peneira.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/colar-osso.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Produto -->
-            <div class="col">
-                <div class="card text-center" id="produto">
-                    <div class="position-absolute top-0 end p-2 text-danger bg-dark"><b>30% OFF</b></div>
-                    <img src="imagens/produtos/pete.png" class="card-img-top" alt="Produto">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome do Produto</h5>
-                        <p class="card-text">R$ 60,00</p>
-                        <p class="card-text">em 12x sem juros</p>
-                        <p class="card-text text-success text-end">Frete grátis</p>
+                    <img class="produto-image card-img-top img-fluid" src="imagens/produtos/peixe.png">
+                    <div class="produto-info card-body">
+                        <h6 class="card-title text-center">Peixe de Madeira</h6>
+                        <p class="card-text produto-descricao mb-lg-3"> Em 6x de R$ 20 sem juros</p>
+                        <p class="card-text text-danger produto-preco"><s style="font-size: 15px;">R$ 200,00</s> <br>R$ 120,00</p>
+                        <p class="card-text text-danger text-lg-end">frete gratis</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br>
-    <!-- Rodapé -->
-    <div class="rodape"></div>
+</div>
 
-    <!-- Bootstrap JavaScript para Bootstrap 5 -->
+<div class="rodape"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
