--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> ̶A̶r̶t̶e̶ ̶I̶n̶d̶í̶g̶e̶n̶a̶</title>
+    <title>A̶r̶t̶e̶ ̶I̶n̶d̶í̶g̶e̶n̶a̶</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -16,8 +16,8 @@
 <body>
 
     <div class="menu"></div>
-
-     <!-- Slide   -->
+ 
+     <!-- Slide -->
      <div id="carouselExampleInterval" class="carousel container-fluid" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
